// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput Snapshots tests should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container bold"
      >
        <div
          class="component s fakeValueWithCurrencyContainer"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <div>
                  <span
                    class="majorPart"
                  />
                  <span
                    class="minorPartAndCurrency"
                  >
                     
                    ₽
                  </span>
                </div>
              </div>
            </div>
          </div>
          
        </div>
        <div
          class="component s formControl component"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <input
                  class="input input"
                  placeholder="0 ₽"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container bold"
    >
      <div
        class="component s fakeValueWithCurrencyContainer"
      >
        <div
          class="inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div>
                <span
                  class="majorPart"
                />
                <span
                  class="minorPartAndCurrency"
                >
                   
                  ₽
                </span>
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="component s formControl component"
      >
        <div
          class="inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <input
                class="input input"
                placeholder="0 ₽"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AmountInput Snapshots tests should match snapshot 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container bold"
      >
        <div
          class="component s fakeValueWithCurrencyContainer"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <div>
                  <span
                    class="majorPart"
                  />
                  <span
                    class="minorPartAndCurrency"
                  >
                     
                    ₽
                  </span>
                </div>
              </div>
            </div>
          </div>
          
        </div>
        <div
          class="component s formControl component"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <input
                  class="input input"
                  placeholder="0 ₽"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        class="container bold filled"
      >
        <div
          class="component s filled fakeValueWithCurrencyContainer"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <div>
                  <span
                    class="majorPart"
                  >
                    12 345
                  </span>
                  <span
                    class="minorPartAndCurrency"
                  >
                    ,67
                     
                    $
                  </span>
                </div>
              </div>
            </div>
          </div>
          
        </div>
        <div
          class="component s filled formControl component"
        >
          <div
            class="inner"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <input
                  class="input input"
                  placeholder="0 $"
                  type="text"
                  value="12 345,67"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container bold filled"
    >
      <div
        class="component s filled fakeValueWithCurrencyContainer"
      >
        <div
          class="inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div>
                <span
                  class="majorPart"
                >
                  12 345
                </span>
                <span
                  class="minorPartAndCurrency"
                >
                  ,67
                   
                  $
                </span>
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="component s filled formControl component"
      >
        <div
          class="inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <input
                class="input input"
                placeholder="0 $"
                type="text"
                value="12 345,67"
              />
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
